# javaee

./: contributors.txt  pom.xml
Administration/: pom.xml
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/: Makefile.am  TODO  configure.ac  outstation.project  outstation.vcproj
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/debian/: changelog
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/linux-additions/: simulationsystems.menu
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/src/common/: app.h
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/src/controller/: controller.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/src/model/: model.h
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/src/view/: view.cpp  view.h
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation/windows/: outstation.iss
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/: README  configure.ac  create_project_links.sh
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/debian/: changelog
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/images/: outstation_gui.xcf
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/src/common/: version.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/src/controller/: controller.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/src/model/: model.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/src/view/: genericerrordialog.cpp  outstationmainframe.cpp  outstationsettingsdialog.cpp  outstationsettingsdialog.h  wxFormBuilderClasses.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/outstation_gui/windows/: outstation_gui.iss  outstation_gui.rc
BigRef/SecondProject/570_highpowerbluetruth_v4/test/: README  configure.ac  outstation_test.project
BigRef/SecondProject/570_highpowerbluetruth_v4/test/misc/: functional_configuration.conf
BigRef/SecondProject/570_highpowerbluetruth_v4/test/mock/: congestionreports_instation.sh  faultreports_instation.sh  functional_configuration_3_default_corrupted.conf  functional_configuration_4_default_corrupted.conf  functional_configuration_4_default_working.conf  functional_configuration_4_test_4_1.conf  journeytimesreports_instation.sh  use_configuration.sh
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/common/: applicationconfiguration.h  clock_test.cpp  test_observer.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/controller/: controller.cpp  controller.h
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/logger/: boostlogger_test.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/model/: model.cpp  model.h
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/multithreading/: activeobject_test.cpp  boostsemaphore_test.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/parsing/: inhandgsmmodemparser_test.cpp  responsebodyparser_test.cpp
BigRef/SecondProject/570_highpowerbluetruth_v4/test/src/view/: view.cpp
BigRef/SecondProject/710-1_brdf_application/: configure.ac
BigRef/SecondProject/710-1_brdf_application/misc/: brdfconfiguration.xml  brdfd  deleteoldestfile.sh
BigRef/SecondProject/710-1_brdf_application/setup/: centos_installation.txt  create_virtualbox_guest.sh  install_virtualbox_guest_additions.sh
BigRef/SecondProject/710-1_brdf_application/setup/deployment/: install_scripts_to_compact_database.sh  install_scripts_to_purge_outdated_records.sh  install_scripts_to_remove_void_records.sh
BigRef/SecondProject/710-1_brdf_application/setup/development/: install_libs_and_tools.sh
BigRef/SecondProject/710-1_brdf_application/src/common/: identifiable.h  iobservable.cpp  iobservable.h  os_utilities.h  stdafx.h  types.cpp  types.h  unicode_types.h
BigRef/SecondProject/710-1_brdf_application/src/logger/: boostlogger.cpp  boostlogger.h
BigRef/SecondProject/710-1_brdf_application/src/model/common/: activetask.h
BigRef/SecondProject/710-1_brdf_application/src/model/communication/: activeboostasiotcpclient.cpp  activeboostasiotcpclient.h  iconnectionconsumer.cpp
BigRef/SecondProject/710-1_brdf_application/src/model/configuration/: brdfmongoconfiguration.cpp  brdfxmlconfiguration.cpp  brdfxmlconfiguration.h  ibrdfxmlconfiguration.cpp  ibrdfxmlconfiguration.h  xmlconfiguration.cpp
BigRef/SecondProject/710-1_brdf_application/src/multithreading/: activeobject.cpp  atomicvariable.h  boostsemaphore.h  eventhandler.h
BigRef/SecondProject/710-1_brdf_application/src/parsing/: http_response_scanner.ll  parser_common.h
BigRef/SecondProject/710-1_brdf_application/src/view/: view.h
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/outstation_gui/: Makefile.am  outstation_gui.project  outstation_gui.vcproj
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/outstation_gui/debian/: control  rules
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/outstation_gui/linux-additions/: outstation_gui.desktop.stub
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/test/: Makefile.am
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/test/misc/: core_configuration.xml
BigRef/SecondProject/BlueTruth/570_highpowerbluetruth_v4/test/mock/: alertandstatusreports_instation.sh  functional_configuration_3_default_working.conf  functional_configuration_3_test_3_3.conf  functional_configuration_4_test_4_3.conf  statisticsreports_instation.sh  statusreports_instation.sh
BigRef/SecondProject/BlueTruth/710-1_brdf_application/: Makefile.am  README  brdf.project  brdfconfiguration.xml  create_project_links.sh
BigRef/SecondProject/BlueTruth/710-1_brdf_application/misc/: brdfconfiguration.xsd  checklogfiles.sh
BigRef/SecondProject/BlueTruth/710-1_brdf_application/mongo/: database.js  insert_records.js  prepare_mongo_driver.sh  ubuntu_install.sh  users.js
BigRef/SecondProject/BlueTruth/710-1_brdf_application/setup/: initialise_guest.sh
BigRef/SecondProject/BlueTruth/710-1_brdf_application/setup/deployment/: install_mongodb.sh
CompleteMessengerREST/: .classpath  (+2 more)
(+1968 files in other folders)
